# scrape-to-api

./: .gitignore  README.md  create_tables.py  pyproject.toml  test_db.py
app/: main.py
app/api/: books_router.py
app/db/: session.py
app/models/: __init__.py  book.py  category.py
app/repositories/: book_repository.py
app/schemas/: book.py
app/scraper/: books_scraper.py  parser.py
app/services/: bookservice.py
app/settings/: db_config.py
src/scrape_to_api/db/: session.py
src/scrape_to_api/models/: __init__.py  book.py  category.py
src/scrape_to_api/repositories/: book_repository.py
src/scrape_to_api/scraper/: books_scraper.py  parser.py  test_scraper.py
src/scrape_to_api/settings/: db_config.py
tests/: test_parser.py  test_routes.py
