[project]
name = "scrape-to-api"
version = "1.0"
description = "Coletor de dados para utilizar na Api"
authors = [
    {name = "gabio",email = "gmls.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
]

[tool.poetry]
packages = [{include = "scrape_to_api", from = "src"}]

[tool.poetry.dependencies]
pycparser = "2.22"


[tool.poetry.group.dev.dependencies]
ruff = "^0.15.4"
taskipy = "^1.14.1"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
python-dotenv = "^1.2.2"


[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev fast_zero/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
