[tool.poetry]
name = "scrape-to-api"
version = "1.0"
description = "Coletor de dados para utilizar na Api"
authors = ["gabio <gmls.dev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
httpx = ">=0.28.1,<0.29.0"
beautifulsoup4 = ">=4.14.3,<5.0.0"
lxml = ">=6.0.2,<7.0.0"
sqlalchemy = ">=2.0.47,<3.0.0"
pymysql = ">=1.1.2,<2.0.0"
pydantic = ">=2.12.5,<3.0.0"
pydantic-settings = ">=2.13.1,<3.0.0"
fastapi = { extras = ["standard"], version = ">=0.135.2,<0.136.0" }
cryptography = ">=46.0.6,<47.0.0"
pycparser = "2.22"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.4"
taskipy = "^1.14.1"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
python-dotenv = "^1.2.2"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['F821']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
dev = "fastapi dev app/main.py"
scrape = "python -m app.scraper.books_scraper"
lint = "ruff check ."
format = "ruff format . && ruff check . --fix"
test = "pytest -s -x --cov=app -vv"
test-cov = "pytest --cov=app --cov-report=term-missing"
pre_test = "task lint"
post_test = "coverage html"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"